{
    "name": "InputMaster",
    "maps": [
        {
            "name": "Player_XBox",
            "id": "46e72001-cabd-4d1a-bd85-0fa202f9e09d",
            "actions": [
                {
                    "name": "TurnLeft",
                    "type": "Button",
                    "id": "674f7423-f301-4a5a-ad29-3f62ec1b31a9",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "TurnRight",
                    "type": "Button",
                    "id": "c4be55de-c857-41d2-ab50-e2bf345396bd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "fa30d395-90b6-412b-8a0c-18a6814ac9b5",
                    "path": "<XInputController>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f7cf9563-3653-462a-8275-3efe1ebbafbd",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnLeft",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5b1124cc-01e9-4fe2-b0ea-dcb02f696bdb",
                    "path": "<XInputController>/buttonEast",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ee78a22b-4919-498f-947c-2eaf0594a44c",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TurnRight",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}